# ExpenseFlow

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/algorithms/: DebtSimplifier.h
include/exceptions/: GroupException.h  InvalidExpenseException.h  UserNotFoundException.h
include/factories/: SplitFactory.h
include/models/: Expense.h  Group.h  Split.h  User.h
include/observer/: NotificationService.h  Observer.h
include/services/: BalanceService.h  ExpenseService.h  GroupService.h
include/strategies/: EqualSplitStrategy.h  ExactSplitStrategy.h  PercentageSplitStrategy.h  SplitStrategy.h
include/utils/: Validator.h
src/algorithms/: DebtSimplifier.cpp
src/factories/: SplitFactory.cpp
src/models/: Expense.cpp  Group.cpp  Split.cpp  User.cpp
src/observer/: NotificationService.cpp
src/services/: BalanceService.cpp  ExpenseService.cpp  GroupService.cpp
src/strategies/: EqualSplitStrategy.cpp  ExactSplitStrategy.cpp  PercentageSplitStrategy.cpp
src/utils/: Validator.cpp
tests/: test_balance.cpp  test_group.cpp  test_split.cpp
